# Calculator

./: UML_Diagram.pptx
Ass2/: calculate.hpp  converter.hpp  main.cpp  operations.hpp  validations.hpp
Ass3/: calculate.hpp  converter.hpp  main  main.cpp  operationFactory.hpp  validations.hpp
Ass4/: CMakeLists.txt  main.cpp
Ass4/include/: calculate.h  converter.h  db-lite.h  headers.h  operationFactory.h  validations.h
Ass4/tests/: test.cpp  test_cpy.cpp
Ass5_python/python/: main.py
Ass5_python/python/include/: Factory.py  calculate.py  converter.py  validations.py
ass1/: calc.cpp  calcBasic.cpp
ass5_go/: go.mod  main.go  main_test.go
ass5_go/calc/: calculate.go
ass5_go/converter/: converter.go
ass5_go/operation/: operationFactory.go
ass5_go/queue/: queue.go
ass5_go/stack/: stack.go
ass5_go/valid/: valid.go
